# headcount-dynamics-article

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/setup/: issues.sh  labels.sh  milestones.sh
article/: headcount-dynamics-ptbr.md  headcount-dynamics.md
docs/: model-design.md  outline.md  thesis.md
exercises/: ex01_markov_foundations.md  ex02_dtmc_analysis.md  ex03_absorption_hitting.md  ex04_continuous_time.md  ex05_applied_headcount.md
notebooks/: 01_markov_foundations.ipynb  02_dtmc_analysis.ipynb  03_absorption_hitting.ipynb  04_birth_death.ipynb  05_headcount_model.ipynb  06_experiments.ipynb
notes/: phase1-markov-foundations.md  phase2-dtmc-analysis.md  phase3-absorption-hitting.md  phase4-continuous-time.md  phase5-headcount-model.md
scripts/: _style.py  exp_absorption.py  exp_birth_death.py  exp_birth_death_simulation.py  exp_eigenvalue_analysis.py  exp_headcount_scenarios.py  exp_sensitivity.py  exp_trajectory_animation.py  exp_transition_convergence.py  run_all_experiments.py
src/: __init__.py  absorption.py  ctmc.py  dtmc.py  headcount.py  simulation.py
tests/: test_absorption.py  test_ctmc.py  test_dtmc.py  test_headcount.py  test_simulation.py
til/: README.md  til-phase-1-markov-chain-in-plain-words.md  til-phase-1-why-row-stochastic.md  til-phase-2-spectral-gap-intuition.md  til-phase-3-fundamental-matrix.md  til-phase-4-poisson-from-birth-death.md  til-phase-5-headcount-as-process.md  til-phase-6-fixed-seeds-repro.md
