[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headcount-dynamics"
version = "0.1.0"
description = "Stochastic process models for workforce planning — from Markov chains to birth-death processes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Bruno Ramos Martins" },
]
keywords = ["markov-chain", "stochastic-process", "workforce", "birth-death", "headcount"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.6",
    "jupyter>=1.0",
    "ipykernel>=6.26",
]

[project.urls]
Repository = "https://github.com/brunoramosmartins/headcount-dynamics-article"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "figures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "NPY",  # numpy-specific
]
ignore = [
    "N803",  # uppercase argument names (P, Q, etc. are standard in math)
    "N806",  # uppercase variable names (same)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
